[package]
name = "wsrpc"
version = "0.1.0"
authors = ["Actyx AG"]
edition = "2018"

[dependencies]
ax-futures-util = { path = "../ax-futures-util" }
warp = "0.3.0"
futures = { version = "0.3.12", package = "futures" }
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["raw_value"] }
bytes = "1.0.1"
tokio = { version = "1.2.0", features = ["full"], package = "tokio" }
tracing = "0.1.22"
tracing-futures = "0.2.4"

[dev-dependencies]
websocket = "0.26.2"
maplit = "1.0.2"

