[package]
name = "wsrpc"
version = "0.1.2"
authors = ["Actyx AG"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["websocket", "rpc"]
description = "WebSocket-based RPC server"
readme = "README.md"
repository = "https://github.com/Actyx/wsrpc"

[dependencies]
bytes = "1.0.1"
futures = { version = "0.3.12", package = "futures" }
pin-project-lite = "0.2.4"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["raw_value"] }
tokio = { version = "1.2.0", features = ["full"], package = "tokio" }
tracing = "0.1.22"
tracing-futures = "0.2.4"
warp = "0.3.0"

[dev-dependencies]
websocket = "0.26.2"
maplit = "1.0.2"
